--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "contentful": "^11.5.22",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "resend": "^6.0.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
