alterado arquivo .env

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_CONTENTFUL_SPACE_ID='oshjvgl1eocv'
-VITE_CONTENTFUL_ACCESS_TOKEN='UIw7UdQObDdEqXY0zeS98x7ehu5gjSazSSlpWKBCeNE'
-RESEND_API_KEY='re_HtX6rU8F_Dc7fGvW8U9r2HTqazaUkTwqU'
+VITE_CONTENTFUL_SPACE_ID=oshjvgl1eocv
+VITE_CONTENTFUL_ACCESS_TOKEN=UIw7UdQObDdEqXY0zeS98x7ehu5gjSazSSlpWKBCeNE
+RESEND_API_KEY=re_HtX6rU8F_Dc7fGvW8U9r2HTqazaUkTwqU
